force-app/main/default/objects/Referee__c/Referee__c.object-meta.xml
<CustomObject>
    <label>Referee</label>
    <nameField>
        <label>Referee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referees</pluralLabel>
    <sharingModel>Private</sharingModel>    
</CustomObject>