force-app/main/default/objects/Referee__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country Referee From</label>    
    <required>true</required>
    <type>Text</type>
    <length>36</length>
</CustomField>