force-app/main/default/objects/Referee__c/fields/Fouls__c.field-meta.xml
<CustomField>
    <fullName>Fouls__c</fullName>
    <label>Fouls Recorded Per Game</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>