force-app/main/default/objects/Referee__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Referee Name</label>    
    <required>true</required>
    <type>Text</type>
    <length>36</length>
</CustomField>