force-app/main/default/objects/Referee__c/fields/RedCards__c.field-meta.xml
<CustomField>
    <fullName>RedCards__c</fullName>
    <label>Red Cards Show Per Game</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>