force-app/main/default/objects/Referee__c/fields/YellowCards__c.field-meta.xml
<CustomField>
    <fullName>YellowCards__c</fullName>
    <label>Yellow Cards Show Per Game</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>