force-app/main/default/objects/Referee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Country__c</columns>
    <columns>YellowCards__c</columns>
    <columns>RedCards__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>